src/components/AboutMe/AboutMe.scss
@use '../../styles/partials/mixins' as *;

.about-me {
  background-color: #ffffff;
  border-radius: 5px;
  margin: 2% 5%;
  padding-top: 0.15625rem;
  padding-left: 2.5%;
  padding-right: 2.5%;
  padding-bottom: 2.5%;
  box-shadow: 5px 5px 10px black;
  &__list {
    list-style: none;
    &-container {
      display: flex;
      flex-direction: column;
      justify-content: space-evenly;
      @include tablet {
        flex-direction: row;
      }
    }
  }
}

